Fixes for CSS to avoid horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ img {
 
 #imagebox {
 	width:100%;
-	padding:30px 10px 50px 0;
+	padding:30px 0 50px 0;
 }
 
 .post {
@@ -109,5 +109,4 @@ img {
 	margin-top:-50px;
 	height:50px;
 	color: #eee;
-	padding-left: 10px;
 }
